fixes the batch block api and corrected the openapi schema for batch create and delete block api
